fixed gallery spacing

--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@ html{
     background-image:url('http://www.uvm.edu/~jconyett/cs142/assignment7/laurenBG.jpg');
     background-repeat:no-repeat;
     background-attachment:fixed;
-      -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 body{
     margin: auto;
@@ -20,7 +20,6 @@ body#home h1{
 
 body#home h2{
     font-size: 60px;
-    margin-top:-1em;
 }
 
 h1 {
@@ -175,13 +174,14 @@ div.wrap img.coverImg {
 
 div.wrapRow {
     height:220px;
+    margin:20px auto;
     width:500px;
 }
-div.wrapRow img#courseWorkImg, div.wrapRow img#courseWorkCover, div.wrapRow img#commisionImg, div.wrapRow img#commisionCover {
-    float:left;
+div.wrapRow div:nth-child(1){
+    margin-right:10px;
 }
-div.wrapRow img#thesisImg, div.wrapRow img#thesisCover, div.wrapRow img#travelImg, div.wrapRow img#travelCover {
-    float:right;
+div.wrapRow div:nth-child(2) {
+    margin-left:10px;
 } 
 
 
